fixed table and block alignment
centered table to page

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -3,12 +3,16 @@ html {font-size: 1.5rem}
 
 body {
     background-color: #f1f4efed;
-
+    text-align: center;
+align-items: center;
   }
+
+
   h1 {
     font-family: "PT Serif", serif;
     font-size: 34px;
 text-shadow: 3px 3px 3px #ababab;
+text-align: center;
 }
 
   h2 { 
@@ -32,21 +36,20 @@ p {font-family: "PT Serif", serif;
    
     /* Thiese are the fonts I am using for my headings */
 
-    nav ul {
-      padding-left: 0;
-  }
+  
+
   nav ul li {
      
       background-color: black;
       height: 20px;
       width: 250px;
       display: block;
-      border: 40px green;
-      margin: 1em 0;
+      margin: 1em 1cm;
        /* same on all sides; */
       padding: 1em;
       padding-left: .50em;
       text-align: center;
+      
   }
   nav ul li a {
       color: white;
@@ -55,6 +58,7 @@ p {font-family: "PT Serif", serif;
       text-align: center;
       text-decoration: none;
   }
+  
   
   .odd {
 
@@ -71,3 +75,22 @@ p {font-family: "PT Serif", serif;
         text-shadow: 3px 3px 3px #13b356;
         
         }
+        #contact {
+          border-color: black;
+
+          border-style: solid;
+          
+          border-width: 3px;
+          
+    
+          }
+          ul {list-style-type: none;
+            display: inline-block;
+  align-items: center;}
+
+  .center
+  {margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+          /* This is where I added a link to my LinkedIn profile using a logo from their branding guidelines available at https://brand.linkedin.com/policies */
